Add opacitiy to dashboard

--- a/app/views/dashboard.pug
+++ b/app/views/dashboard.pug
@@ -7,7 +7,7 @@ block content
     .col-md-6
       .jumbotron.main-container
           .col-md-12
-            canvas#racesCancelled
+            canvas#weatherPie
 block scripts
   script(src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.bundle.min.js")
   script(src="/js/controllers/dashboard.js")
