--- a/less/dashboard.less
+++ b/less/dashboard.less
@@ -8,3 +8,13 @@ canvas, .graph-background {
   height: 50px;
   width: 50px;
 }
+
+h1.title {
+  color: rgb(200,0,10);
+  margin-top: 1.5em;
+}
+
+h2.card-title {
+  color: rgb(200,0,10);
+  margin-bottom: 2em;
+}
