--- a/less/dashboard.less
+++ b/less/dashboard.less
@@ -1,7 +1,6 @@
 .main-container {
   margin-top: 4em;
   background-color: #DAE0D9;
-  opacity: 0.9;
 }
 
 canvas, .graph-background {
@@ -14,7 +13,7 @@ h1.title {
   margin-top: 1.5em;
 }
 
-h2.card-title {
-  color: rgb(200,0,10);
+.card-title {
+  color: black;
   margin-bottom: 2em;
 }
