--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -1,7 +1,6 @@
 .main-container {
   margin-top: 4em;
   background-color: #DAE0D9;
-  opacity: 0.9;
 }
 canvas,
 .graph-background {
@@ -12,7 +11,7 @@ h1.title {
   color: #c8000a;
   margin-top: 1.5em;
 }
-h2.card-title {
-  color: #c8000a;
+.card-title {
+  color: black;
   margin-bottom: 2em;
 }
