Add card image and chart caption

--- a/app/views/dashboard.pug
+++ b/app/views/dashboard.pug
@@ -10,8 +10,14 @@ block content
     .row
       .col-md-6
         .jumbotron.main-container
-          h2.card-title Sonniges Wetter bei Rennbahnen in Prozent
-          .col-md-12
+          .row
+            .col-md-12
+              #sunny-track
+          hr
+          .row
+            .col-md-12
+              h2.card-title.text-center Sonniges Wetter
+
             canvas#weatherPie
 block scripts
   script(src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.bundle.min.js")
