--- a/less/dashboard.less
+++ b/less/dashboard.less
@@ -17,3 +17,9 @@ h1.title {
   color: black;
   margin-bottom: 2em;
 }
+
+#sunny-track {
+  background: url('../images/sunny-track.png') no-repeat;
+  height: 100px;
+  width: 100%;
+}
