--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -15,3 +15,8 @@ h1.title {
   color: black;
   margin-bottom: 2em;
 }
+#sunny-track {
+  background: url('../images/sunny-track.png') no-repeat;
+  height: 100px;
+  width: 100%;
+}
