--- a/less/dashboard.less
+++ b/less/dashboard.less
@@ -23,3 +23,9 @@ h1.title {
   height: 100px;
   width: 100%;
 }
+
+#champagne-shower {
+  background: url('../images/champagne-shower.png') no-repeat;
+  height: 100px;
+  width: 100%;
+}
