--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -20,3 +20,8 @@ h1.title {
   height: 100px;
   width: 100%;
 }
+#champagne-shower {
+  background: url('../images/champagne-shower.png') no-repeat;
+  height: 100px;
+  width: 100%;
+}
