Change card title

--- a/app/views/dashboard.pug
+++ b/app/views/dashboard.pug
@@ -16,7 +16,7 @@ block content
           hr
           .row
             .col-md-12
-              h2.card-title.text-center Sonniges Wetter
+              h2.card-title.text-center Sonnigste Rennbahnen
             canvas#weatherPie
 
       .col-md-6
