--- a/less/dashboard.less
+++ b/less/dashboard.less
@@ -29,3 +29,9 @@ h1.title {
   height: 100px;
   width: 100%;
 }
+
+#thunder {
+  background: url('../images/thunder.png') no-repeat;
+  height: 100px;
+  width: 100%;
+}
