--- a/less/layout.less
+++ b/less/layout.less
@@ -1,8 +1,28 @@
 .list-group-item, .card {
-  background-color: #134074;
+  background-color: #B30004;
 }
 
-p {
-  color: #EEF4ED;
+p, h1, h2, h3 {
+  color: #DDE2DC;
   font-family: 'Droid Sans Mono', monospace;
+}
+
+body {
+  background-color: #DAE0D9;
+  top: 0;
+  bottom: 0;
+  margin: 0;
+  background: url('../images/race-track.jpg') no-repeat top center;
+  background-size: cover;
+  background-attachment: fixed;
+  min-height: 600px;
+}
+
+a:hover {
+  text-decoration: none;
+  opacity: 0.4;
+}
+
+a::after {
+  text-decoration: none;
 }
