--- a/less/dashboard.less
+++ b/less/dashboard.less
@@ -1,5 +1,4 @@
-.main-container {
-  margin-top: 4em;
+.card-container {
   background-color: #DAE0D9;
 }
 
@@ -11,6 +10,10 @@ canvas, .graph-background {
 h1.title {
   color: rgb(200,0,10);
   margin-top: 1.5em;
+}
+
+h3.subtitle {
+  margin-bottom: 1em;
 }
 
 .card-title {
