--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -1,5 +1,4 @@
-.main-container {
-  margin-top: 4em;
+.card-container {
   background-color: #DAE0D9;
 }
 canvas,
@@ -10,6 +9,9 @@ canvas,
 h1.title {
   color: #c8000a;
   margin-top: 1.5em;
+}
+h3.subtitle {
+  margin-bottom: 1em;
 }
 .card-title {
   color: black;
