Apply placeholder directive to dashboard

--- a/app/views/dashboard.pug
+++ b/app/views/dashboard.pug
@@ -10,61 +10,64 @@ block content
         h3.subtitle.text-center Alles was du zur Formel 1 wissen musst.
     .row
       .col-md-6
-        .jumbotron.card-container
-          .row
-            .col-md-12
-              #sunny-track
-          hr
-          .row
-            .col-md-12
-              h2.card-title.text-center Sonnigste Rennbahnen
-            canvas#weatherPie
+        placeholder(loadingdata="weatherChartData", height="900px")
+          .jumbotron.card-container
+            .row
+              .col-md-12
+                #sunny-track
+            hr
+            .row
+              .col-md-12
+                h2.card-title.text-center Sonnigste Rennbahnen
+              canvas#weatherPie
 
       .col-md-6
-        .jumbotron.card-container
-          .row
-            .col-md-12
-              #champagne-shower
-          hr
-          .row
-            .col-md-12
-              h2.card-title.text-center Top 10 Rennfahrer
-          .row
-            .col-md-12
-              table.table.table-bordered
-                .thead.thead-default
-                  tr
-                    th #
-                    th Rennfahrer ID
-                    th Gewonnene Rennen
-                .tbody
-                  tr(ng-repeat="racer in topTenRacers")
-                    th(ng-bind="$index + 1")
-                    th(ng-bind="racer._id")
-                    th(ng-bind="racer.racesWon")
+        placeholder(loadingdata="topTenRacers", height="800px")
+          .jumbotron.card-container.ng-cloak
+            .row
+              .col-md-12
+                #champagne-shower
+            hr
+            .row
+              .col-md-12
+                h2.card-title.text-center Top 10 Rennfahrer
+            .row
+              .col-md-12
+                table.table.table-bordered
+                  .thead.thead-default
+                    tr
+                      th #
+                      th Rennfahrer ID
+                      th Gewonnene Rennen
+                  .tbody
+                    tr(ng-repeat="racer in topTenRacers")
+                      th(ng-bind="$index + 1")
+                      th(ng-bind="racer._id")
+                      th(ng-bind="racer.racesWon")
     .row
       .col-md-6
-        .jumbotron.card-container
-          .row
-            .col-md-12
-              #thunder
-          hr
-          .row
-            .col-md-12
-              h2.card-title.text-center Meiste Gewitter
-          .row
-            .col-md-12
-              table.table.table-bordered
-                .thead.thead-default
-                  tr
-                    th #
-                    th Strecken ID
-                    th Renntage mit Gewitter
-                .tbody
-                  tr(ng-repeat="track in thunderyTracks")
-                    th(ng-bind="$index + 1")
-                    th(ng-bind="track.trackId")
-                    th(ng-bind="track.weatherCount")
+        placeholder(loadingdata="thunderyTracks", height="400px")
+          .jumbotron.card-container.ng-cloak
+            .row
+              .col-md-12
+                #thunder
+            hr
+            .row
+              .col-md-12
+                h2.card-title.text-center Meiste Gewitter
+            .row
+              .col-md-12
+                table.table.table-bordered
+                  .thead.thead-default
+                    tr
+                      th #
+                      th Strecken ID
+                      th Renntage mit Gewitter
+                  .tbody
+                    tr(ng-repeat="track in thunderyTracks")
+                      th(ng-bind="$index + 1")
+                      th(ng-bind="track.trackId")
+                      th(ng-bind="track.weatherCount")
     
 block scripts
   script(src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.bundle.min.js")
