--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -32,3 +32,8 @@ h3.subtitle {
   height: 100px;
   width: 100%;
 }
+#race {
+  background: url('../images/race.png') no-repeat;
+  height: 100px;
+  width: 100%;
+}
