--- a/less/dashboard.less
+++ b/less/dashboard.less
@@ -38,3 +38,9 @@ h3.subtitle {
   height: 100px;
   width: 100%;
 }
+
+#race {
+  background: url('../images/race.png') no-repeat;
+  height: 100px;
+  width: 100%;
+}
