--- a/less/dashboard.less
+++ b/less/dashboard.less
@@ -44,3 +44,9 @@ h3.subtitle {
   height: 100px;
   width: 100%;
 }
+
+#party {
+  background: url('../images/party.png') no-repeat;
+  height: 100px;
+  width: 100%;
+}
