--- a/less/dashboard.less
+++ b/less/dashboard.less
@@ -50,3 +50,9 @@ h3.subtitle {
   height: 100px;
   width: 100%;
 }
+
+#fans {
+  background: url('../images/fans.png') no-repeat;
+  height: 100px;
+  width: 100%;
+}
