--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -42,3 +42,8 @@ h3.subtitle {
   height: 100px;
   width: 100%;
 }
+#fans {
+  background: url('../images/fans.png') no-repeat;
+  height: 100px;
+  width: 100%;
+}
